# cartopian

./: .gitignore  AGENTS.md  CAPABILITIES.md  CLAUDE.md  CONFIG-MAPPING.md  LICENSE  README.md  UPGRADE_PLAN.md  install-cartopian.md  pyproject.toml
.gemini/: settings.json
.github/: FUNDING.yml
cli/: __main__.py  atomic_write.py  capabilities.py  claude_hook.py  deidentify.py  emit.py  main.py  mediated_write.py  migrations.py  protocol_gate.py  provenance.py
docs/: COMPATIBILITY.md  CONTAINMENT-SUITE.md  ENFORCEMENT.md  pm-action-gap-register.md
evaluations/: README.md  __init__.py  __main__.py  categories.py  intent.py  routing.py  runner.py
mcp_server/: __init__.py  __main__.py  server.py  skill_metadata.py
protocol/: CHANGELOG.md  CONVENTIONS.md  INSTALL_VERIFICATION.md
scripts/: install.py  verify_stdio_framing.py
skills/: README.md  adopt-plan.md  adopt-requirements.md  check-for-updates.md  close-plan.md  init-project.md  init-workspace.md  migrate-project.md  plan-project.md  register-mcp.md  run-handoff.md  run-task.md  skill-metadata.json  start-session.md  use-cartopian.md
templates/: DECISION.md  ENGINEERING.md  IMPLEMENTATION_PLAN.md  PHASE.md  PLAN_CLOSEOUT.md  PROMPT.md  REPORT.md  REQUIREMENTS.md  REVIEW.md  SPEC.md  STANDARDS.md  TASK.md  global.cartopian.toml
tests/: scaffold.py  test_compact_intent_contract.py  test_conventions_retirement_static.py  test_fr012_residual_patterns.py  test_initiation_intent_static.py  test_install.py  test_p00_build_004_aggregator_layouts.py  test_p01_build_004_mediated_pm_actions.py  (+6 more)
(+342 files in other folders)
